tests/NormalTests/paczka1/fuzzy1/19128479.err
Error in line 6: IXQ9lU A517 =7,8
Error in line 4: OyW8w A979 3,3
Error in line 7: OyW8w A435 5,6
Error in line 10: vrmFTiNYa A435 58,7
Error in line 8: 8DgQDpMTfdF S535 5,1
Error in line 5: ORXCF1m0GM A435 63,9
Error in line 12: OyW8w S535 54,5
Error in line 23: IXQ9lU A979 247,5
Error in line 15: 8DgQDpMTfdF A517 96,2
Error in line 32: OyW8w A979 59,2
Error in line 31: IXQ9lU A435 17,6
Error in line 33: OyW8w S535 37,9
